// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleTableFilter component should render correctly with custom filter button 1`] = `
<div
  className="pf-c-input-group ins-c-filter  "
>
  <Input
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="Search items"
    widget-id="filter"
  />
  <Button
    action="filter"
    onClick={[Function]}
    variant="secondary"
  >
    Custom title
  </Button>
</div>
`;

exports[`SimpleTableFilter component should render correctly with custom placeholder 1`] = `
<div
  className="pf-c-input-group ins-c-filter  "
>
  <Input
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="Custom placeholder"
    widget-id="filter"
  />
  <Button
    action="filter"
    onClick={[Function]}
    variant="secondary"
  >
    Filter
  </Button>
</div>
`;

exports[`SimpleTableFilter component should render correctly with filter button 1`] = `
<div
  className="pf-c-input-group ins-c-filter  "
>
  <Input
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="Search items"
    widget-id="filter"
  />
  <Button
    action="filter"
    onClick={[Function]}
    variant="secondary"
  >
    Filter
  </Button>
</div>
`;

exports[`SimpleTableFilter component should render correctly with filter opitons 1`] = `
<div
  className="pf-c-input-group ins-c-filter  "
>
  <Dropdown
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          data-key="one"
          onClick={[Function]}
        >
          one
        </DropdownItem>,
      ]
    }
    isOpen={false}
    onSelect={[Function]}
    toggle={
      <DropdownToggle
        onToggle={[Function]}
      >
        Dropdown
      </DropdownToggle>
    }
  />
  <Input
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="Search items"
    widget-id="filter"
  />
  <Button
    action="filter"
    onClick={[Function]}
    variant="secondary"
  >
    Filter
  </Button>
</div>
`;

exports[`SimpleTableFilter component should render correctly with filter opitons and custom dropdown title 1`] = `
<div
  className="pf-c-input-group ins-c-filter  "
>
  <Dropdown
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          data-key="one"
          onClick={[Function]}
        >
          one
        </DropdownItem>,
      ]
    }
    isOpen={false}
    onSelect={[Function]}
    toggle={
      <DropdownToggle
        onToggle={[Function]}
      >
        Filter by
      </DropdownToggle>
    }
  />
  <Input
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="Search items"
    widget-id="filter"
  />
  <Button
    action="filter"
    onClick={[Function]}
    variant="secondary"
  >
    Filter
  </Button>
</div>
`;

exports[`SimpleTableFilter component should render correctly without filter button 1`] = `
<div
  className="pf-c-input-group ins-c-filter ins-u-no-title "
>
  <Input
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="Search items"
    widget-id="filter"
  />
  <SearchIcon
    className="ins-c-search-icon"
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
  />
</div>
`;
